# pl_squad

./: .gitignore  .pre-commit-config.yaml  README.md  __main__.py  pyproject.toml  utils.py
api/: api_football_wrapper.py
cache/: cache_players.json  cache_premier_league.json  cache_single_player.json  cache_squads.json
config/: settings.py
pl_squad/: __main__.py  api_football_wrapper.py  config.py  fetch_and_cache.py  model.py  tools.py
pl_squad/agents/: football_agent.py  squad_lookup_agent.py
pl_squad/api/: api_football_wrapper.py
pl_squad/cache/: cache_players.json  cache_squads.json
pl_squad/chains/: squad_chain.py
pl_squad/web/: main.py
pl_squad/web/static/: index.html  script.js  style.css
tests/: test_tools.py
tools/: tools.py
